docs: 리펙토링 목록 정리
step1의 리뷰를 바탕으로 리펙토링 목록을 정리하였음

--- a/src/main/java/racing/docs/요구사항.md
+++ b/src/main/java/racing/docs/요구사항.md
@@ -27,3 +27,14 @@
   - [x] 각 회차별 실행 결과를 출력한다.
 - [x] 게임이 끝나면 우승자가 나온다.  
 - [x] 가장 멀리 이동한 1명 이상의 우승자 명단을 탐색해 출력한다.
+
+## 리펙토링 목록 정리
+- [x] Screen 추상클래스 인터페이스로 변경
+- [x] Dto를 어떻게 반환할 것인지, dto의 패키지 또한 변경한다. (Cars, Winners 객체)
+- [x] 테스트를 위한 메소드를 삭제한다.
+- [x] Collections.singletonList()를 사용한다.
+- [x] 테스트 클래스에서 @DisplayName으로 테스트의 용도를 설명한다 
+- [x] 에러메세지 출력시 사용자가 어떤 값을 입력햇는지 또한 출력한다. 
+- [x] `할당 -> 검증`의 과정을 `복사(방어) -> 검증 -> 할당`의 과정으로 변환  
+- [x] 매개변수르 들어오는 값들을 final 처리
+- [ ] 원시값을 객체로 포장한다. 
