refactor: String으로 지정된 name Name 인터페이스로 변환
CarName을 통해 자동차이름에 대한 책임을 지니게함

--- a/src/main/java/racing/docs/요구사항.md
+++ b/src/main/java/racing/docs/요구사항.md
@@ -37,4 +37,5 @@
 - [x] 에러메세지 출력시 사용자가 어떤 값을 입력햇는지 또한 출력한다. 
 - [x] `할당 -> 검증`의 과정을 `복사(방어) -> 검증 -> 할당`의 과정으로 변환  
 - [x] 매개변수르 들어오는 값들을 final 처리
-- [ ] 원시값을 객체로 포장한다. 
+- [x] 원시값을 객체로 포장한다.
+- [ ] 중복 이름에 대해서 검증한다
