feat: 중복된 이름 검증 로직 구현
중복된 이름에 대해서 검증하는 로직을 추가함

--- a/src/main/java/racing/docs/요구사항.md
+++ b/src/main/java/racing/docs/요구사항.md
@@ -42,4 +42,4 @@
 - [x] `할당 -> 검증`의 과정을 `복사(방어) -> 검증 -> 할당`의 과정으로 변환
 - [x] 매개변수르 들어오는 값들을 final 처리
 - [x] 원시값을 객체로 포장한다.
-- [ ] 중복 이름에 대해서 검증한다
+- [x] 중복 이름에 대해서 검증한다
